unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/zkfedex__CustomAddressSource__c.object-meta.xml
<CustomObject>
    <description>Custom Address Source stores the object and field mapping data allowing any standard or custom object to be used as a shipping data source.</description>
    <label>FedEx Custom Address Source</label>
    <nameField>
        <label>Custom Address Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FedEx Custom Address Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>