unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__AlertToRecipientField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__AlertToRecipientField__c</fullName>
    <label>Alert to Recipient Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>