unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__AlertToShipperField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__AlertToShipperField__c</fullName>
    <label>Alert to Shipper Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>