unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__AutoCreateShipment__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__AutoCreateShipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Create Shipment</label>
    <type>Checkbox</type>
</CustomField>