unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__BillDutiesCountryField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BillDutiesCountryField__c</fullName>
    <label>Bill Duties Country Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>