unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__BillDutiesField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BillDutiesField__c</fullName>
    <label>Bill Duties Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>