unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__BillingAccountField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BillingAccountField__c</fullName>
    <label>Billing Account Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>