unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__BillingCountryField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BillingCountryField__c</fullName>
    <label>Billing Country Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>