unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__BillingField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BillingField__c</fullName>
    <label>Billing Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>