unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__CargoAircraftOnlyField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CargoAircraftOnlyField__c</fullName>
    <label>Cargo Aircraft Only Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>