unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__CityField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CityField__c</fullName>
    <description>The custom object field that represents the recipient city.</description>
    <inlineHelpText>The custom object field that represents the recipient city.</inlineHelpText>
    <label>City Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>