unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__CountryField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CountryField__c</fullName>
    <description>The custom object field that represents the recipient country code.</description>
    <inlineHelpText>The custom object field that represents the recipient country code.</inlineHelpText>
    <label>Country Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>