unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__CurrencyField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CurrencyField__c</fullName>
    <label>Currency Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>