unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__CustomAddressSourceObject__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CustomAddressSourceObject__c</fullName>
    <label>Custom Address Source Object</label>
    <length>200</length>
    <type>Text</type>
</CustomField>