unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__DateCertainHDPField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DateCertainHDPField__c</fullName>
    <label>Date Certain Home Delivery Date Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>