unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__DefaultPackageTypeField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DefaultPackageTypeField__c</fullName>
    <label>Default Package Type Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>