unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__DeliverySignatureOptionField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DeliverySignatureOptionField__c</fullName>
    <label>Delivery Signature Option Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>