unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__DimensionUnitsField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DimensionUnitsField__c</fullName>
    <label>Dimension Units Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>