unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__DomesticReturnServiceTypeField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DomesticReturnServiceTypeField__c</fullName>
    <label>Domestic Return Service Type Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>