unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__DomesticServiceTypeField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DomesticServiceTypeField__c</fullName>
    <label>Domestic Service Type Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>