unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__DropoffTypeField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DropoffTypeField__c</fullName>
    <label>Dropoff Type Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>