unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__EmailField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__EmailField__c</fullName>
    <description>The custom object field that represents the recipient email address.</description>
    <inlineHelpText>The custom object field that represents the recipient email address.</inlineHelpText>
    <label>Email Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>