unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__EmailRecipient3Field__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__EmailRecipient3Field__c</fullName>
    <label>Email Recipient 3 Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>