unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__EmailRecipient5Field__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__EmailRecipient5Field__c</fullName>
    <label>Email Recipient 5 Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>