unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__HDPTypeField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__HDPTypeField__c</fullName>
    <label>Home Delivery Premium Type Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>