unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__InternationalReturnServiceTypeField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__InternationalReturnServiceTypeField__c</fullName>
    <label>International Return Service Type Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>