unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__InternationalServiceTypeField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__InternationalServiceTypeField__c</fullName>
    <label>International Service Type Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>