unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__IsResidenceField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__IsResidenceField__c</fullName>
    <description>The custom object field that indicates whether the recipient address is a residence.</description>
    <inlineHelpText>The custom object field that indicates whether the recipient address is a residence.</inlineHelpText>
    <label>Is Residence Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>