unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__LabelImageTypeField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__LabelImageTypeField__c</fullName>
    <label>Label Image Type Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>