unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__NameField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__NameField__c</fullName>
    <description>The custom object field that represents the recipient name.</description>
    <inlineHelpText>The custom object field that represents the recipient name.</inlineHelpText>
    <label>Name Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>