unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__OneRateField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__OneRateField__c</fullName>
    <label>One Rate Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>