unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__OutputDeliveryDateField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__OutputDeliveryDateField__c</fullName>
    <label>Output Delivery Date Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>