unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__OutputNetCharge__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__OutputNetCharge__c</fullName>
    <label>Output Net Charge</label>
    <length>200</length>
    <type>Text</type>
</CustomField>