unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__OutputServiceTypeField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__OutputServiceTypeField__c</fullName>
    <label>Output Service Type Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>