unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__OverridePaperlessField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__OverridePaperlessField__c</fullName>
    <label>Override Paperless Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>