unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__PackageContentsField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PackageContentsField__c</fullName>
    <label>Package Contents Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>