unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__PhoneField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PhoneField__c</fullName>
    <description>The custom object field that represents the recipient phone number.</description>
    <inlineHelpText>The custom object field that represents the recipient phone number.</inlineHelpText>
    <label>Phone Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>