unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__PickupInstructionsField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PickupInstructionsField__c</fullName>
    <label>Pickup Instructions Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>