unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__PickupTimeField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PickupTimeField__c</fullName>
    <label>Pickup Time Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>