unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__PostalCodeField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PostalCodeField__c</fullName>
    <description>The custom object field that represents the recipient zip/postal code.</description>
    <inlineHelpText>The custom object field that represents the recipient zip/postal code.</inlineHelpText>
    <label>Postal Code Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>