unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__RecipientCustomsIDTypeField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__RecipientCustomsIDTypeField__c</fullName>
    <label>Recipient Customs ID Type Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>