unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__RecipientTaxIDField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__RecipientTaxIDField__c</fullName>
    <label>Recipient Tax ID Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>