unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__RecipientTaxIDTypeField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__RecipientTaxIDTypeField__c</fullName>
    <label>Recipient Tax ID Type Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>