unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__ReferenceDeptNumberField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ReferenceDeptNumberField__c</fullName>
    <label>Reference - Department Number Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>