unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__ReferenceInvoiceNumberField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ReferenceInvoiceNumberField__c</fullName>
    <label>Reference - Invoice Number Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>