unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__ReferencePoNumberField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ReferencePoNumberField__c</fullName>
    <label>Reference - P.O. Number Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>