unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__ReferenceRmaNumberField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ReferenceRmaNumberField__c</fullName>
    <label>Reference - RMA Number Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>