unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__ReferenceYourReferenceField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ReferenceYourReferenceField__c</fullName>
    <label>Reference - Your Reference Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>