unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__ReturnLabelTypeField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ReturnLabelTypeField__c</fullName>
    <label>Return Label Type Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>