unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__ReturnPackageTypeField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ReturnPackageTypeField__c</fullName>
    <label>Return Package Type Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>