unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__ReturnTypeField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ReturnTypeField__c</fullName>
    <label>Return Type Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>