unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__SaturdayDeliveryField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SaturdayDeliveryField__c</fullName>
    <label>Saturday Delivery Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>