unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__SenderCityField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SenderCityField__c</fullName>
    <label>City Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>