unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__SenderCompanyNameField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SenderCompanyNameField__c</fullName>
    <label>Company Name Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>