unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__SenderCountryField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SenderCountryField__c</fullName>
    <label>Country Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>