unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__SenderEmailField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SenderEmailField__c</fullName>
    <label>Email Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>