unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__SenderIsResidenceField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SenderIsResidenceField__c</fullName>
    <label>Is Residence Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>