unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__SenderNameField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SenderNameField__c</fullName>
    <label>Name Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>