unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__SenderPhoneField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SenderPhoneField__c</fullName>
    <label>Phone Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>