unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__SenderPostalCodeField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SenderPostalCodeField__c</fullName>
    <label>Postal Code Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>