unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__SenderStateField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SenderStateField__c</fullName>
    <label>State Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>