unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__SenderStreet2TextLineField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SenderStreet2TextLineField__c</fullName>
    <label>Street 2 Text Line Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>