unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__SenderStreetTextAreaField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SenderStreetTextAreaField__c</fullName>
    <label>Street Text Area Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>