unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__SenderTaxIDTypeField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SenderTaxIDTypeField__c</fullName>
    <label>Sender Tax ID Type Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>