unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__ShipDateField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ShipDateField__c</fullName>
    <label>Ship Date Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>