unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__ShipmatePreferenceField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ShipmatePreferenceField__c</fullName>
    <label>Shipmate Preference Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>