unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__SignatureReleaseNumberField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SignatureReleaseNumberField__c</fullName>
    <label>Signature Release Number Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>