unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__SmartPostAncillaryEndorsementField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SmartPostAncillaryEndorsementField__c</fullName>
    <label>SmartPost Ancillary Endorsement Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>