unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__SmartPostIndiciaField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SmartPostIndiciaField__c</fullName>
    <label>SmartPost Indicia Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>