unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__StateField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__StateField__c</fullName>
    <description>The custom object field that represents the recipient state/province.</description>
    <inlineHelpText>The custom object field that represents the recipient state/province.</inlineHelpText>
    <label>State Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>