unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__Street2TextLineField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Street2TextLineField__c</fullName>
    <description>The custom object field that is a single text line that represents the second line of the recipient street.</description>
    <inlineHelpText>The custom object field that is a single text line that represents the second line of the recipient street.</inlineHelpText>
    <label>Street 2 Text Line Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>