unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/fields/zkfedex__WeightUnitsField__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__WeightUnitsField__c</fullName>
    <label>Weight Units Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>