unpackaged/main/default/objects/zkfedex__CustomAddressSource__c/listViews/zkfedex__All.listView-meta.xml
<ListView>
    <fullName>zkfedex__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>